--- a/android/src/main/res/layout/layout_custom_notification.xml
+++ b/android/src/main/res/layout/layout_custom_notification.xml
@@ -17,6 +17,15 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tvAppName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.Compat.Notification.Line2"
+                android:textSize="11sp"
+                android:textColor="#888888"
+                android:visibility="gone" />
+
+            <TextView
                 android:id="@+id/tvNameCaller"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
